Fix more minor suggestions